fixed logo stretching bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ header ul {
 
 header li {
     margin: 1em 1em;
-    padding: .5em;
+    padding: .5em .75em;
     border: 2px solid #262522;
     border-radius: .5em;
 }
@@ -47,8 +47,11 @@ header a:focus {
 
 
 .nav-logo {
-    width: 10%;
+    max-width: 80px;
+    min-width: 60px;
+    width: 100%;
     height: auto;
+    object-fit: contain;
 }
 
 /* ==============
